--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,8 +7,9 @@ on:
     branches: [ "main" ]
 
 jobs:
-  lint:
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -19,7 +20,11 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: pip install flake8
+        run: |
+          pip install flake8 pytest
 
       - name: Run linting
         run: flake8 .
+
+      - name: Run tests
+        run: pytest
